// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UIRadio renders correctly - basic 1`] = `
<div>
  <div
    class="ui-radio ui-radio--large"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option ui-radio__wrapper__option--checked"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - disabled 1`] = `
<div>
  <div
    class="ui-radio ui-radio--disabled"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="-1"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="-1"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="-1"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="-1"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - with helper 1`] = `
<div>
  <div
    class="ui-radio"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
    <span
      class="ui-radio__wrapper__helper"
    >
      test
    </span>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - with id 1`] = `
<div>
  <div
    class="ui-radio"
    id="test"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - with label 1`] = `
<div>
  <div
    class="ui-radio"
  >
    <label
      class="ui-radio__label"
      for="z8a8d7a5zad4"
    >
      test
    </label>
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - with listeners 1`] = `
<div>
  <div
    class="ui-radio"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option ui-radio__wrapper__option--checked"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          checked=""
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - with option disabled 1`] = `
<div>
  <div
    class="ui-radio"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option ui-radio__wrapper__option--disabled"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          disabled=""
          name="test"
          tabindex="-1"
          type="radio"
          value="option5"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 5
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UIRadio renders correctly - with value 1`] = `
<div>
  <div
    class="ui-radio"
  >
    <div
      class="ui-radio__wrapper"
    >
      <label
        class="ui-radio__wrapper__option ui-radio__wrapper__option--checked"
      >
        <input
          checked=""
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option1"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option2"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option3"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-radio__wrapper__option"
      >
        <input
          class="ui-radio__wrapper__option__radio"
          name="test"
          tabindex="0"
          type="radio"
          value="option4"
        />
        <span
          class="ui-radio__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;
